--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         .hidden {
             visibility: hidden;
         }
+
+        input {
+            width: 25vw;
+            height: 10vh;
+
+            margin-top: 15px;
+        }
     </style>
     <title>La Bancarella di Willy</title>
 </head>
@@ -89,6 +96,10 @@
             <p class="price">39€</p>
         </div>
             
+    </div>
+
+    <div>
+        <input type="text" placeholder="Cosa ne pensi?">
     </div>
     
 
